--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" class="h-full bg-white">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+<head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="theme-color" content="#000000"/>
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+            name="description"
+            content="Web site created using create-react-app"
     />
     <link href="../src/assets/output.css" rel="stylesheet">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="manifest.json" />
+    <link rel="manifest" href="manifest.json"/>
     <script src="https://kit.fontawesome.com/3901cf777d.js" crossorigin="anonymous"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -25,8 +25,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>WalkMe</title>
-  </head>
-  <body class="h-full">
+</head>
+<body class="h-full">
     <div id="root"></div>
-  </body>
+    <div id="root-portal"></div>
+
+</body>
 </html>
